# n8n-Workflow-Popularity-System

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_review.js  seed_data.json  test.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py  schemas.py
collectors/: forum.py  google.py  youtube.py
db/: models.py  session.py
docs/: API.md  ARCHITECTURE.md  COLLECTORS.md  DEPLOYMENT.md  README.md  SCORING.md
scripts/: cron_refresh.sh  load_seed_data.py  scheduler.py
services/: normalizer.py  orchestrator.py  scoring.py
